# Strollcast

./: .gitignore  CLAUDE.md  README.md  astro.config.mjs  package-lock.json  package.json
.astro/: settings.json
.github/workflows/: ci.yml  deploy.yml
api/: README.md  package-lock.json  package.json  vitest.config.ts  wrangler.toml
api/container/: main.go
api/migrations/: 0001_create_episodes.sql  0002_seed_episodes.sql  0007_add_submitted_by.sql  0008_create_users_table.sql
api/scripts/: generate-episode-id-mapping.ts  migrate-episode-ids-database.ts
api/src/: audio.test.ts  audio.ts  episode-generator.test.ts  episode-generator.ts  index.test.ts  index.ts  transcript.test.ts  transcript.ts
api/test/mocks/: cloudflare-workers.ts
modal/: README.md  pyproject.toml
modal/src/: __init__.py  app.py  audio.py  generator.py  storage.py
public/api/: episodes.json  gated-attention-2025.vtt  megatron-lm-2021.vtt  pathways-2022.vtt  pytorch-fsdp-2023.vtt  qlora-2023.vtt  zero-2020.vtt
public/barham-2022-pathways/: README.md
public/dettmers-2023-qlora/: README.md
public/rajbhandari-2020-zero/: README.md
public/zhao-2023-pytorch-fsdp/: README.md
python/: generate.py  migrate_cache_to_r2.py  pixi.toml
site/: auth.config.ts
site/src/: env.d.ts
site/src/components/: AdminLayout.astro
site/src/layouts/: Layout.astro
site/src/lib/: auth.ts
site/src/pages/: admin.astro  index.astro  jobs.astro  login.astro  submit.astro  terms.astro
site/src/pages/admin/: create.astro  users.astro
src/layouts/: Layout.astro
src/pages/: index.astro
(+10 files in other folders)
