[project]
name = "strollcast-modal"
version = "0.1.0"
description = "Serverless podcast generation for Strollcast"
requires-python = ">=3.11"
dependencies = [
    "modal>=0.66.0",
    "elevenlabs>=1.0.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
